// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> input field with cutom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <input
        class="sc-kEqYlL jzZEFj"
        id="textField"
        name="name"
        placeholder="Text"
        type="text"
        value="test"
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        Bad name
      </span>
    </div>
  </form>
</div>
`;

exports[`<TextField /> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="textField"
  name="name"
  placeholder="Text"
  type="text"
  value=""
/>
`;

exports[`<TextField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="textField"
        label="Test"
        name="name"
        placeholder="Text*"
        required=""
        type="text"
        value=""
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<TextField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd dnsgCl"
    >
      <label
        for="name"
      >
        Test
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="textField"
        label="Test"
        name="name"
        placeholder="Text"
        type="text"
        value=""
      />
    </div>
  </form>
</div>
`;
